[tool.poetry]
name = "yaenv"
version = "1.6.4"
readme = "README.rst"
license = "BSD-3-Clause"
description = "Yet another dotenv parser for Python."
homepage = "https://github.com/ObserverOfTime/yaenv"
documentation = "https://yaenv.readthedocs.io"
authors = [
    "ObserverOfTime <chronobserver@disroot.org>",
]
keywords = [
    "12factor",
    "config",
    "configuration",
    "django",
    "dotenv",
    "environment",
    "variables",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[[tool.poetry.packages]]
include = "yaenv"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-pspec = "^0.0.4"
ruff = "^0.6.8"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "~7.4.7"
sphinx-rtd-theme = "^2.0.0"

[tool.poetry.urls]
"Bug tracker" = "https://github.com/ObserverOfTime/yaenv/issues"
"Donations" = "https://github.com/sponsors/ObserverOfTime"

[tool.coverage.run]
source = ["yaenv"]

[tool.coverage.report]
fail_under = 90

[tool.pytest.ini_options]
testpaths = ["tests"]
required_plugins = ["pytest-cov", "pytest-pspec"]
addopts = ["--pspec", "--cov", "--cov-report=term"]

[tool.ruff]
line-length = 80
output-format = "grouped"

[tool.ruff.lint]
select = ["F", "E", "W", "D", "I", "Q"]
ignore = [
    "D107",
    "D203",
    "D212",
    "D402",
    "D413",
    "D416"
]
extend-select = [
    "ANN001",
    "ANN201",
    "ANN204",
    "ANN205",
    "ANN206",
    "RUF100"
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"

[tool.mypy]
pretty = true
strict = true
warn_return_any = false
disallow_any_generics = false

[build-system]
requires = ["poetry>=1.8"]
build-backend = "poetry.masonry.api"
